# FractalRecursiveCoherence

./: .gitignore  .vercelignore  00_README_START_HERE.md  ARXIV_READY_STATUS.md  ARXIV_SUBMISSION_PACKAGE.md  AUDIT_EXECUTIVE_SUMMARY.md  BLOCKERS_RESOLVED_COMPLETE.md  BREAKTHROUGH_QUANTUM_INTERFERENCE.md  BREAKTHROUGH_VALIDATED.md  CLAY_EXECUTION_PLAN.md  CLAY_LEVEL_ANALYSIS.md  CLEANUP_SUMMARY.md  CLEAR_CACHE_INSTRUCTIONS.md  CODEBASE_UNDERSTANDING_MAP.md  COMPARISON_WITH_PHYSICS.md  COMPLETE_DOCUMENTATION_AUDIT.md  COMPLETE_FERMION_SECTOR_MILESTONE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PAPER_OUTLINE.md  COMPLETE_SOVEREIGNTY_SESSION_2025-10-04.md  COMPLETE_THEORY_15_OF_15.md  COMPLETE_UNIFIED_THEORY.md  COMPLETE_UNIFIED_THEORY_PAPER.aux  COMPLETE_UNIFIED_THEORY_PAPER.out  COMPLETE_UNIFIED_THEORY_PAPER.tex  COMPREHENSIVE_STATUS_OCT_9_2025.md  COMPREHENSIVE_THEORY_NOTES.md  COMPREHENSIVE_THEORY_STATUS_FINAL.md  CRITICAL_FINDINGS_SUMMARY.md  CRITICAL_INVESTIGATION_N21_DERIVATION.md  CRITICAL_ISSUES_RESOLUTION_SUMMARY.md  CRITICAL_PRE_PUBLICATION_FIXES.md  CRITICAL_WEAKNESSES_AUDIT.md  CRITICISMS_RESOLVED_WITH_TESTS.md  CURRENT_STATE_SUMMARY.md  CURRENT_STATUS_OCTOBER_2025.md  DARK_MATTER_SEPARATE_SECTOR.md  DEEP_THEORY_RESEARCH.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_AUDIT_COMPLETE.md  (+127 more)
FIRM-Core/: .editorconfig  .gitignore  .pre-commit-config.yaml  ALL_HEURISTICS_REPLACED_2025-10-07.md  AUDIO_AS_EMERGENT_HARMONIC.md  BROWSER_TEST_RESULTS.md  CABIBBO_ANGLE_EXACT.md  CKM_EXACT_GROUP_THEORY_ANALYSIS.md  CKM_STATUS.md  CLAY_NS_1.1_LYAPUNOV_PROOF.md  CLAY_NS_COMPLETE_KAM_PROOF.md  CLAY_NS_COMPLETE_LYAPUNOV_PROOF.md  CODEMAP.md  COHERENCE_TENSOR_FIELD_THEORY.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETE_THEORY_AUDIT_2025-10-07.md  COMPLETE_THEORY_INVESTIGATION_2025-10-07.md  COMPREHENSIVE_SGC_AUDIT.md  CONSCIOUSNESS_TFCA_COMPLETE.md  CRITICAL_ERRORS_IN_MY_CHANGES.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_ISSUES_ANALYSIS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DYNAMIC_EVOLUTION_IMPLEMENTATION.md  E8_TFCA_EMBEDDING_COMPLETE.md  EMERGENCE_STALL_DIAGNOSIS.md  EXACT_ROOT_CAUSES_AND_FIXES.md  EXPERIMENTAL_PREDICTIONS.md  FIELD_STATE_COMBINATION_FIX.md  FIELD_STATE_COMBINATION_STATUS.md  FINAL_EMERGENCE_AUDIT.md  FINAL_HONEST_ASSESSMENT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_METAMIRROR_STATUS.md  FINAL_ROOT_CAUSE_VIEWPORT.md  FINAL_SACRED_SYSTEM_STATUS.md  FINAL_STATUS.md  FINAL_SYSTEMATIC_VALIDATION.md  (+132 more)
FIRM-Core/FIRM_audio/: __init__.py  derivations.py  index.js
FIRM-Core/FIRM_clifford/: __init__.py  interface.py  mapping.py
FIRM-Core/FIRM_constants/: FIRM_constants.h  (+3 more)
(+415 files in other folders)
